Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
The following IDL, although perfectly legal, leads to error CS0542 with C#:
test.thrift
struct ClassAndProp { 1: bool ClassAndProp }
gives
> error CS0542: 'ClassAndProp': member names cannot be the same as their enclosing type
Attachments
Attachments
Issue Links
- breaks
-
THRIFT-3554 Constant decls may lead to "Error: internal error: prepare_member_name_mapping() already active for different struct"
-
- Closed
-
- contains
-
THRIFT-1212 Members capital case conflict
-
- Closed
-
- is depended upon by
-
THRIFT-2857 C# generator creates uncompilable code for struct constants
-
- Closed
-
- relates to
-
THRIFT-2508 Uncompileable C# code due to language keywords in IDL
-
- Closed
-