THRIFT-2557 CS0542 member names cannot be the same as their enclosing type Client: C# Patch: Jens Geyer